force-app/main/default/objects/Lead/validationRules/Customer_Type_Required_on_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Type_Required_on_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK ( TEXT ( Customer_Type__c )) &amp;&amp;
 IsConverted = True</errorConditionFormula>
    <errorDisplayField>Customer_Type__c</errorDisplayField>
    <errorMessage>Customer Type is Required before Converting a Lead.</errorMessage>
</ValidationRule>