force-app/main/default/objects/Lead/listViews/Individual_Lead.listView-meta.xml
<ListView>
    <fullName>Individual_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue: Individual</label>
    <queue>Individual</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>