force-app/main/default/objects/Lead/listViews/Large_Group_Lead.listView-meta.xml
<ListView>
    <fullName>Large_Group_Lead</fullName>
    <columns>Customer_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Queue: Large Group</label>
    <queue>Large_Group</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>