force-app/main/default/objects/Lead/listViews/Open_Employer_Association_Leads.listView-meta.xml
<ListView>
    <fullName>Open_Employer_Association_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>Customer_Type__c</field>
        <operation>equals</operation>
        <value>Employer,Association</value>
    </filters>
    <label>Open Employer &amp; Association Leads</label>
</ListView>