force-app/main/default/objects/Lead/listViews/Open_Union_Trust_Fund_Leads.listView-meta.xml
<ListView>
    <fullName>Open_Union_Trust_Fund_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>Customer_Type__c</field>
        <operation>equals</operation>
        <value>Union,Trust Fund</value>
    </filters>
    <label>Open Union &amp; Trust Fund Leads</label>
</ListView>