force-app/main/default/objects/Lead/listViews/Small_Group_Lead.listView-meta.xml
<ListView>
    <fullName>Small_Group_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue: Small Group</label>
    <queue>Small_Group</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>